# Portfolio-Frontend

./: cv-viewer.html  important_files.html  index.html  project-details.html  pyproject.toml
.github/workflows/: deploy.yml
assets/css/: main.css
assets/cv/: Shudipta Majumder_CV.docx
assets/js/: main.js
forms/: contact.php
